@@ -1,20 +1,21 @@
 package com.selim.taskmanager.service;
 
 import com.selim.taskmanager.data.RoleDao;
-import com.selim.taskmanager.entitiy.Role;
-import com.selim.taskmanager.rest.model.RoleAddRequestModel;
-import com.selim.taskmanager.rest.model.RoleAddResponseModel;
-import com.selim.taskmanager.rest.model.RoleShowResponseModel;
-import com.selim.taskmanager.rest.model.RoleUpdateRequestModel;
+import com.selim.taskmanager.entity.Role;
+import com.selim.taskmanager.entity.Users;
+import com.selim.taskmanager.rest.model.*;
+import org.springframework.context.annotation.Lazy;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class RoleServiceImpl implements RoleService {
     private RoleDao roleDao;
 
-    public RoleServiceImpl(RoleDao roleDao) {
+    public RoleServiceImpl(@Lazy RoleDao roleDao) {
         this.roleDao = roleDao;
     }
 
@@ -45,10 +46,12 @@ public class RoleServiceImpl implements RoleService {
     }
 
     @Override
-    public List<RoleShowResponseModel> getAllRoles() {
+    public List<RoleShowResponseModel2> getAllRoles() {
+        Role role = new Role();
         List<Role> roles = roleDao.getAllRoles();
-        return roles.stream().map(r -> new RoleShowResponseModel(r.getId(), r.getName(), r.getDescription())).toList();
+        return roles.stream().map(u -> new RoleShowResponseModel2(u.getId(), u.getName(), u.getDescription())).collect(Collectors.toList());
     }
+
 
     @Override
     public RoleAddResponseModel getRoleByName(String roleName) {
@@ -63,5 +66,14 @@ public class RoleServiceImpl implements RoleService {
         RoleAddResponseModel roleAddResponseModel = new RoleAddResponseModel(
                 id, roleDao.getRoleById(id).getName(), roleDao.getRoleById(id).getDescription());
         return roleAddResponseModel;
+    }
+
+    @Override
+    public void assignUserToRole(int userId, UUID roleId) {
+        roleDao.assignUserToRole(userId, roleId);
+    }
+    @Override
+    public List<Users> getUsersByRoleId(UUID roleId) {
+        return roleDao.getUsersByRoleId(roleId);
     }
 }
